--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/white</item>
         <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="s">@drawable/launch_background</item>
         <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">1000</item>
-        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/launch_background</item>
+        <!--<item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/launch_background</item>-->
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
 </resources>
